resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-warden
  namespace: vault-warden
  labels:
    app: vault-warden
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vault-warden
      app.kubernetes.io/name: vault-warden
  template:
    metadata:
      labels:
        app.kubernetes.io/component: vault-warden
        app.kubernetes.io/name: vault-warden
    spec:
      volumes:
        - name: vault-warden-data
          persistentVolumeClaim:
            claimName: vault-warden
      containers:
        - image: vaultwarden/server:1.37.2
          imagePullPolicy: IfNotPresent
          name: vault-warden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: vault-warden-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 200
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      serviceAccountName: vault-warden
