resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-warden
  namespace: vault-warden
  labels:
    app: vault-warden
  annotations:
    gethomepage.dev/href: https://vault.crt.house
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Password Manager
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: vaultwarden
    gethomepage.dev/name: Vault Warden
    gethomepage.dev/pod-selector: ""
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: vault.crt.house
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $req_id";
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "25"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  ingressClassName: "nginx-internal"
  tls:
    - hosts:
        - "vault.crt.house"
  rules:
    - host: "vault.crt.house"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault-warden
              port:
                name: "http"
        - path: /notifications/hub
          pathType: Exact
          backend:
            service:
              name: vault-warden
              port:
                name: "websocket"
